<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin_medium_2">

    <View
        android:id="@+id/vv_new_arrivals"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginTop="@dimen/margin_xxlarge"
        android:foreground="@color/light_grey"/>

    <ImageView
        android:id="@+id/iv_new_arrivals"
        android:layout_width="@dimen/popular_image_width"
        android:layout_height="@dimen/popular_image_height"
        android:layout_margin="@dimen/margin_medium_2"
        android:scaleType="centerCrop"
        android:src="@drawable/new_arrival_hero_image" />

    <TextView
        android:id="@+id/tv_new_arrival_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/iv_new_arrivals"
        android:layout_alignTop="@+id/vv_new_arrivals"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/new_arrival_title"
        android:textColor="@color/primary_text" />

    <TextView
        android:id="@+id/tv_new_arrival_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_new_arrival_title"
        android:layout_below="@+id/tv_new_arrival_title"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/new_arrival_description"
        android:ellipsize="end"
        android:lineSpacingMultiplier="1.3"
        android:lines="3"
        android:textColor="@color/secondary_text" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:src="@drawable/ic_near_me_blue_24dp"
        />

    <TextView
        android:id="@+id/tv_statistic1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/iv_new_arrivals"
        android:layout_below="@+id/vv_new_arrivals"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/statistic1"
        android:textColor="@color/primary_text" />

    <TextView
        android:id="@+id/tv_statistic_count1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/tv_statistic1"
        android:layout_alignTop="@id/tv_statistic1"
        android:layout_marginLeft="@dimen/margin_medium"
        android:text="@string/statistic_count1"
        android:textColor="@color/secondary_text" />

    <TextView
        android:id="@+id/tv_statistic2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/tv_statistic_count1"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_alignTop="@+id/tv_statistic1"
        android:text="@string/statistic2"
        android:textColor="@color/primary_text" />

    <TextView
        android:id="@+id/tv_statistic_count2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/tv_statistic2"
        android:layout_alignTop="@id/tv_statistic1"
        android:layout_marginLeft="@dimen/margin_medium"
        android:text="@string/statistic_count2"
        android:textColor="@color/secondary_text" />
</RelativeLayout>